--- a/templates/index.html
+++ b/templates/index.html
@@ -1,91 +1,49 @@
-<!doctype html>
-<html lang="en">
+{% extends 'base.html' %} {% block body %}
 
-<head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
-
-    <title>TODO</title>
-</head>
-
-<body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="/">MYTODO</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Link</a>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Dropdown
-                </a>
-                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="#">Action</a></li>
-                            <li><a class="dropdown-item" href="#">Another action</a></li>
-                            <li>
-                                <hr class="dropdown-divider">
-                            </li>
-                            <li><a class="dropdown-item" href="#">Something else here</a></li>
-                        </ul>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-                    </li>
-                </ul>
-                <form class="d-flex">
-                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-outline-success" type="submit">Search</button>
-                </form>
-            </div>
+<div class="container">
+    <h2>Add a TODO</h2>
+    <form action='/' method="POST">
+        <div class="mb-3">
+            <label for="title" class="form-label">TODO LIST</label>
+            <input type="text" class="form-control" name="title" id="title" aria-describedby="title">
         </div>
-    </nav>
+        <div class="mb-3">
+            <label for="desc" class="form-label">TODO DESCRIPTION</label>
+            <input type="text" class="form-control" name='desc' id="desc">
+        </div>
 
-    <div class="container">
-        <h2>Add a TODO</h2>
-        <form action='/' method="POST">
-            <div class="mb-3">
-                <label for="title" class="form-label">TODO LIST</label>
-                <input type="text" class="form-control" name="title" id="title" aria-describedby="title">
+        <button type="submit" class="btn btn-primary">Submit</button>
+    </form>
+
+</div>
+<div class="container my-3">
+    <h2>YOUR TODO</h2>
+    <table class="table">
+        <thead>
+            <tr>
+                <th scope="col">SNo</th>
+                <th scope="col">Title</th>
+                <th scope="col">Description</th>
+                <th scope="col">Time</th>
+            </tr>
+        </thead>
+        <tbody>
+            {% if allTodo|length == 0 %} no record
+            <div class="alert alert-dark" role="alert">
+                Add your TODO
             </div>
-            <div class="mb-3">
-                <label for="desc" class="form-label">TODO DESCRIPTION</label>
-                <input type="text" class="form-control" name='desc' id="desc">
-            </div>
-
-            <button type="submit" class="btn btn-primary">Submit</button>
-        </form>
-
-    </div>
-    <div class="container my-3">
-        <h2>YOUR TODO</h2>
-        <table class="table">
-            <thead>
-                <tr>
-                    <th scope="col">SNo</th>
-                    <th scope="col">Title</th>
-                    <th scope="col">Description</th>
-                    <th scope="col">Time</th>
-                </tr>
-            </thead>
-            <tbody>
-                {% for todo in allTodo %}
-                <tr>
-                    <th scope="row">{{loop.index}}</th>
-                    <td>{{todo.title}}</td>
-                    <td>{{todo.desc}}</td>
-                    <td>{{todo.date_created}}</td>
+            {% endif %} {% for todo in allTodo %}
+            <tr>
+                <th scope="row">{{loop.index}}</th>
+                <td>{{todo.title}}</td>
+                <td>{{todo.desc}}</td>
+                <td>{{todo.date_created}}</td>
+                <td>
+                    <a href="/update/{{todo.sno}}" type="button" class="btn btn-info btn-sm mx-2">Update</button>
+                        <a href="/delete/{{todo.sno}}" type="button" class="btn btn-danger btn-sm mx-2">Delete</button>
+                        
+                    </td>
                 </tr>
                 {% endfor %}
 
@@ -104,6 +62,6 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js" integrity="sha384-eMNCOe7tC1doHpGoWe/6oMVemdAVTMs2xqW4mwXrXsW0L84Iytr2wi5v2QjrP/xp" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.min.js" integrity="sha384-cn7l7gDp0eyniUwwAZgrzD06kc/tftFf19TOAs2zVinnD/C7E91j9yyk5//jjpt/" crossorigin="anonymous"></script>
     -->
-</body>
 
-</html>
+
+{% endblock body %}
